Changed CSS filename to correct file.

--- a/CSSChallenge.html
+++ b/CSSChallenge.html
@@ -4,30 +4,10 @@
 
 <head>
 	<title>CSS Challenge</title>
-	<link rel="stylesheet" type="text/css" href="democss2.css" />
+	<link rel="stylesheet" type="text/css" href="csschallenge.css" />
 </head>
 
 <body>
-
-<!--
-		<div id="header" class="grid_12">
-			<h1>CSSChallenge</h1>
-			<h1>Welcome to your first full page web layout CSS challenge.</h1>
-				<div id="nav">
-					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Services</a></li>
-						<li><a href="">Blog</a></li>
-						<li><a href="">Projects</a></li>
-						<li><a href="">Contacts</a></li>
-					</ul>
-				</div>
-		</div>
-		<div id="feature" class="grid_12">
-			<p>Your favorite CSS attributes altogether.</p>
-		</div>
--->
 
 	<header>
 		<section>
@@ -53,15 +33,14 @@
 			<h1>Your favorite CSS attributes altogether.</h1>
 		</div>
 
-<!--	<section id="feature" class="grid_12"> -->
 		<div class="box1">
 			<p>Planning Coding Optimize</p>
 		</div>
-<!--	<section class="article grid_8"> -->
+
 		<div class="box2">
 			<p>Creative Design Ideas</p>
 		</div>
-<!--	<section class="article grid_4"> -->
+
 		<div class="box3">
 			<p>Highlights</p>
 			<p>Praesent Vestibulum</p>
@@ -69,20 +48,20 @@
 			<p>Praesent Vestibulum</p>
 			<p>Praesent Vestibulum</p>
 		</div>
-<!--	<section class="article grid_4"> -->
+
 		<div class="box4">
 			<p>Popular Posts</p>
 			<p>Praesent Vestibulum</p>
 			<p>Aeneum</p>
 		</div>
-<!--	<section class="article grid_4"> -->
+
 		<div class="box4">
 			<p>New Perspectives in Design</p>
 			<p>Praesent Vestibulum</p>
 			<p>Details</p>
 		</div>
 	</section>
-<!--	<section class="footer grid_12"> -->
+
 		<div id="footer">
 			<p>CSS Challenge by Eric Wright</p>
 		</div>
